Fix loading of LAB KPL swatches.

Not only was the wrong element being read, but also the formula was wrong.
I should create a unittest for this when I am going to refactor the palettes again.

BUG:441139